# EIFL

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  TODO  projects.py
cmake/: FindCPR.cmake
contrib/eifl-git.aur/: PKGBUILD
include/: CalendarSettingsWidget.hpp  CalendarWidget.hpp  Database.hpp  EventInfoWidget.hpp  EventListWidget.hpp  HtmlDelegate.hpp  IntraActivity.hpp  IntraData.hpp  IntraDatabase.hpp  IntraDatabase.impl.hpp  IntraDatabaseLoader.hpp  IntraDatabaseThread.hpp  IntraEvent.hpp  IntraItem.hpp  IntraModule.hpp  IntraNotification.hpp  IntraProject.hpp  IntraSession.hpp  IntraUser.hpp  Keyring.hpp  LoginWindow.hpp  MainWindow.hpp  ModuleInfoWidget.hpp  ModuleListWidget.hpp  NotificationListWidget.hpp  NotificationWidget.hpp  ProjectInfoWidget.hpp  ProjectListWidget.hpp  ProjectScheduleWidget.hpp  ScheduleWidget.hpp  SideBar.hpp  UserInfoWidget.hpp
old/: README.md
res/: icons.qrc
res/themes/: default.qss
source/: CalendarSettingsWidget.cpp  CalendarWidget.cpp  Database.cpp  EventInfoWidget.cpp  EventListWidget.cpp  IntraActivity.cpp  IntraData.cpp  IntraDatabase.cpp  IntraDatabaseLoader.cpp  IntraEvent.cpp  IntraItem.cpp  IntraModule.cpp  IntraNotification.cpp  IntraProject.cpp  IntraSession.cpp  IntraUser.cpp  Keyring.cpp  LoginWindow.cpp  MainWindow.cpp  ModuleInfoWidget.cpp  ModuleListWidget.cpp  NotificationListWidget.cpp  NotificationWidget.cpp  ProjectInfoWidget.cpp  ProjectListWidget.cpp  ProjectScheduleWidget.cpp  ScheduleWidget.cpp  SideBar.cpp  UserInfoWidget.cpp  main.cpp
